# java-cpp-study

./: CMakeLists.txt
foo/: CMakeLists.txt
foo/include/: foo.h
foo/src/: foo.cpp  foo.h
java-jni/: .CMakeLists.txt.swp  CMakeLists.txt
java-jni/c/: jni_wrapper.cpp
java-jni/java/src/arm/test/app/: Main.java
java-jni/java/src/arm/test/lib/: FooClass.java
